--- a/Astronautica/Packages/manifest.json
+++ b/Astronautica/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.inputsystem": "1.14.1",
     "com.unity.mathematics": "1.3.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.tools": "2.2.5",
     "com.unity.netcode.gameobjects": "2.4.3",
     "com.unity.nuget.mono-cecil": "1.11.4",
     "com.unity.package-validation-suite": "0.22.0-preview",
